fix: creds as args via cmd